--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 html * {
     padding:0px;
     margin:0px;
-    border:0px;
     font-family: 'Work Sans', sans-serif;
 }
 
@@ -173,3 +172,37 @@ footer p {
     font-size:smaller;
 }
 
+#bookTripTitle {
+    padding-top:70px;
+    padding-left:20px;
+}
+#bookTripForm {
+    padding-top:20px;
+    padding-left:20px;
+    height: 20px;
+    
+}
+
+.inputField {
+    padding-left:10px;
+}
+
+#formSubmitButton {
+    color: black;
+    background-color: rgb(147, 141, 153);
+    padding: 5px;
+    border: none;
+}
+#resultsPage {
+    padding-top:70px;
+}
+
+#thanks {
+    padding-left:20px;
+}
+
+#details {
+    padding-top:10px;
+    padding-bottom:80%;
+    padding-left:20px;
+}
